stateDiagram-v2
    [*] --> pending: buyer places the order

    pending --> confirmed: seller accepts
    pending --> cancelled: cancelled before acceptance

    confirmed --> processing: preparing the goods
    processing --> shipping: GHN shipment created
    shipping --> delivered: receipt confirmed

    delivered --> [*]: RELEASE escrow

    confirmed --> refunded: cancelled after acceptance
    processing --> refunded
    shipping --> refunded: delivery failed

    refunded --> [*]: REFUND escrow
    cancelled --> [*]: REFUND escrow

    note right of delivered
        Who may move an order here?
        Only the buyer of this order,
        the GHN webhook, or an admin,
        and only from status shipping.
        Enforced by order-status.policy.ts
    end note